<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.view.fragments.NoteFragment">



    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/add_image"
        android:background="@color/primary_light"
        />
    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/image"
        />

    <EditText
        android:id="@+id/titleTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/currentDate"
        android:layout_margin="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:hint="@string/title"
        />

    <EditText
        android:id="@+id/bodyTextBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleTextBox"
        android:layout_above="@+id/linear"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="top|start"
        android:hint="@string/three_dots"
        />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/DeleteNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete_note"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_note"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>